--- a/sass/goradio.sass
+++ b/sass/goradio.sass
@@ -1,35 +1,44 @@
 *
-  margin: 0
-  padding: 0
+    margin: 0
+    padding: 0
 
 body
-  background: #FFFFFF
+    background: #FFFFFF
 
 .login-holder
-  margin: auto
-    top: 30px
-  background-color: #cff1ff
-  border: 5px solid #2c4480
-  border-radius: 5px
-  width: 330px
-  position: relative
-  padding: 15px
-  box-sizing: border-box
-  label
+    margin: auto
+        top: 30px
+    background-color: #cff1ff
+    border: 5px solid #2c4480
+    border-radius: 5px
+    width: 330px
     position: relative
-    display: inline-block
-    clear: both
-    margin: 5px
-    width: 100%
-    text-align: right
-    line-height: 25px
-    color: #2c4480
-    input
-      border: 1px solid #2c4480
-      border-radius: 3px
-      padding: 5px
-      float: right
-      margin-left: 20px
-      &[type=button]
-        background-color: #2c4480
-        color: #FFFFFF
+    padding: 15px
+    box-sizing: border-box
+    h2
+        text-align: center
+        font-family: Helvetica Neue, Helvetica, Arial, sans-serif
+        color: #2c4480
+        font-size: 30px
+        margin: auto
+            bottom: 10px
+        border-bottom: 1px solid #2c4480
+        padding: 2px
+    label
+        position: relative
+        display: inline-block
+        clear: both
+        margin: 5px
+        width: 100%
+        text-align: right
+        line-height: 25px
+        color: #2c4480
+        input
+            border: 1px solid #2c4480
+            border-radius: 3px
+            padding: 5px
+            float: right
+            margin-left: 20px
+            &[type=button]
+                background-color: #2c4480
+                color: #FFFFFF
