--- a/www/views/login.html
+++ b/www/views/login.html
@@ -1,4 +1,5 @@
 <div class="login-holder">
+    <h2>Login</h2>
     <label>
         Username:
         <input type="text" name="username" id="username" ng-model="login.username"/>
