--- a/www/static/css/goradio.css
+++ b/www/static/css/goradio.css
@@ -15,6 +15,15 @@ body {
   position: relative;
   padding: 15px;
   box-sizing: border-box; }
+  .login-holder h2 {
+    text-align: center;
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+    color: #2c4480;
+    font-size: 30px;
+    margin: auto;
+      margin-bottom: 10px;
+    border-bottom: 1px solid #2c4480;
+    padding: 2px; }
   .login-holder label {
     position: relative;
     display: inline-block;
