got registration to work.

--- a/www/views/login.html
+++ b/www/views/login.html
@@ -12,3 +12,6 @@
         <input type="button" value="login" ng-click="login.doLogin()"/>
     </label>
 </div>
+<div>
+    <label>Not registered yet? Why don't you <a ng-click="login.goRegister()">Register</a>?</label>
+</div>
