--- a/www/static/css/goradio.css
+++ b/www/static/css/goradio.css
@@ -5,24 +5,24 @@
 body {
   background: #FFFFFF; }
 
+.container[role=main] {
+  margin-top: 70px; }
+
 .login-holder {
   margin: auto;
     margin-top: 30px;
-  background-color: #cff1ff;
-  border: 5px solid #2c4480;
-  border-radius: 5px;
-  width: 330px;
   position: relative;
   padding: 15px;
   box-sizing: border-box; }
-  .login-holder h2 {
-    text-align: center;
+  .login-holder * {
+    margin-bottom: 5px; }
+  .login-holder .modal-title {
+    text-align: left;
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     color: #2c4480;
     font-size: 30px;
     margin: auto;
       margin-bottom: 10px;
-    border-bottom: 1px solid #2c4480;
     padding: 2px; }
   .login-holder label {
     position: relative;
@@ -42,5 +42,134 @@ body {
       .login-holder label input[type=button] {
         background-color: #2c4480;
         color: #FFFFFF; }
+
+.row {
+  margin-left: 0;
+  margin-right: 0; }
+
+#wrapper {
+  padding-left: 70px;
+  transition: all 0.4s ease 0s;
+  height: 100%;
+  margin-top: 51px; }
+
+#sidebar-wrapper {
+  margin-left: -150px;
+  left: 70px;
+  width: 150px;
+  background: #222;
+  position: fixed;
+  height: 100%;
+  z-index: 10000;
+  transition: all 0.4s ease 0s; }
+
+.sidebar-nav {
+  display: block;
+  float: left;
+  width: 150px;
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+
+#page-content-wrapper {
+  padding-left: 0;
+  margin-left: 0;
+  width: 100%;
+  height: auto; }
+
+#wrapper.active {
+  padding-left: 150px; }
+
+#wrapper.active #sidebar-wrapper {
+  left: 150px; }
+
+#page-content-wrapper {
+  width: 100%; }
+
+#sidebar_menu li a, .sidebar-nav li a {
+  color: #999;
+  display: block;
+  float: left;
+  text-decoration: none;
+  width: 150px;
+  background: #252525;
+  border-top: 1px solid #373737;
+  border-bottom: 1px solid #1A1A1A;
+  -webkit-transition: background 0.5s;
+  -moz-transition: background 0.5s;
+  -o-transition: background 0.5s;
+  -ms-transition: background 0.5s;
+  transition: background 0.5s; }
+
+.sidebar_name {
+  padding-top: 25px;
+  color: #fff;
+  opacity: 0.7; }
+
+.sidebar-nav li {
+  line-height: 40px;
+  text-indent: 20px; }
+
+.sidebar-nav li a {
+  color: #999999;
+  display: block;
+  text-decoration: none; }
+
+.sidebar-nav li a:hover {
+  color: #fff;
+  background: rgba(255, 255, 255, 0.2);
+  text-decoration: none; }
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+  text-decoration: none; }
+
+.sidebar-nav > .sidebar-brand {
+  height: 65px;
+  line-height: 60px;
+  font-size: 18px; }
+
+.sidebar-nav > .sidebar-brand a {
+  color: #999999; }
+
+.sidebar-nav > .sidebar-brand a:hover {
+  color: #fff;
+  background: none; }
+
+#main_icon {
+  float: right;
+  padding-right: 28px;
+  padding-top: 20px; }
+
+.sub_icon {
+  float: right;
+  padding-right: 28px;
+  padding-top: 10px; }
+
+.content-header {
+  height: 65px;
+  line-height: 65px; }
+
+.content-header h1 {
+  margin: 0;
+    margin-left: 20px;
+  line-height: 65px;
+  display: inline-block; }
+
+@media (max-width: 767px) {
+  #wrapper {
+    padding-left: 70px;
+    transition: all 0.4s ease 0s; }
+
+  #sidebar-wrapper {
+    left: 70px; }
+
+  #wrapper.active {
+    padding-left: 150px; }
+
+  #wrapper.active #sidebar-wrapper {
+    left: 150px;
+    width: 150px;
+    transition: all 0.4s ease 0s; } }
 
 /*# sourceMappingURL=goradio.css.map */
