Made the navbar and sidebar responsive

--- a/sass/goradio.sass
+++ b/sass/goradio.sass
@@ -53,12 +53,12 @@ body
 #wrapper
     padding-left: 70px
     transition: all .4s ease 0s
-    height: 100%
-    margin-top: 51px
+    box-sizing: border-box
 
 #sidebar-wrapper
     margin:
         left: -150px
+        top: -19px
     left: 70px
     width: 150px
     background: #222
@@ -173,6 +173,7 @@ body
 
     #sidebar-wrapper
         left: 70px
+        margin-top: -13px
 
     #wrapper.active
         padding-left: 150px
