--- a/www/views/dashboard.html
+++ b/www/views/dashboard.html
@@ -1,3 +1,3 @@
 <div class="container theme-showcase" role="main">
-    Welcome to {{dashboard.pageName}}
+    Welcome to the {{dashboard.pageName}} {{dashboard.user.username}}!
 </div>
